# wasm-image

./: .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  LICENSE_MIT  README.md  index.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
benchmark/: benchmark.ts  notes.md
benchmark/results/: DynamicImage.chart.html  DynamicImage.json
docs/: globals.html  index.html
docs/assets/js/: search.js
docs/classes/: _image_.wasmimage.html
docs/interfaces/: _image_.ipoint.html
docs/modules/: _image_.html
rust-image-wrapper/: Cargo.toml
rust-image-wrapper/pkg/: package.json  wasm_rust_image.d.ts  wasm_rust_image.js  wasm_rust_image_bg.d.ts  wasm_rust_image_bg.wasm
rust-image-wrapper/src/: lib.rs  log.rs
src/: DynamicImage.test.ts  DynamicImage.ts  WasmImage.test.ts  bounds.rs  bounds.ts  channels.ts  color.rs  color.test.ts  color.ts  color_type.rs  dimensions.rs  dimensions.ts  dynamic-image.test.ts  dynamic-image.ts  dynamic_image.rs  errors.rs  filter_type.rs  generic-image-view.ts  generic-image.test.ts  generic-image.ts  generic_image.rs  guess-format.test.ts  guessFormat.test.ts  guessFormat.ts  image.ts  imageDimensions.test.ts  imageDimensions.ts  image_format.rs  image_output_format.rs  lib.rs  lib.ts  macros.rs  pixel.rs  pixel.test.ts  pixel.ts  sub-image.test.ts  sub-image.ts  symbols.ts  typed-array.ts  utils.rs  (+1 more)
src/__test__/: image.test.ts
src/tests/: images.ts  snapshots.ts
types/: image.d.ts
